--- a/package.json
+++ b/package.json
@@ -1,60 +1,60 @@
 {
-  "name": "@almothafar/angular-signature-pad",
-  "version": "5.0.1",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "build:prod": "rimraf dist && ng build angular-signature-pad --configuration production",
-    "pack": "cd dist/angular-signature-pad/ && npm pack",
-    "publish": "cd dist/angular-signature-pad/ && npm publish --access=public",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "dependencies": {
-    "@angular/animations": "^17.0.4",
-    "@angular/common": "^17.0.4",
-    "@angular/compiler": "^17.0.4",
-    "@angular/core": "^17.0.4",
-    "@angular/forms": "^17.0.4",
-    "@angular/platform-browser": "^17.0.4",
-    "@angular/platform-browser-dynamic": "^17.0.4",
-    "@angular/router": "^17.0.4",
-    "rxjs": "~7.5.6",
-    "signature_pad": "^4.0.7",
-    "tslib": "^2.4.0",
-    "zone.js": "~0.14.2"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.2",
-    "@angular-eslint/builder": "17.1.0",
-    "@angular-eslint/eslint-plugin": "17.1.0",
-    "@angular-eslint/eslint-plugin-template": "17.1.0",
-    "@angular-eslint/schematics": "17.1.0",
-    "@angular-eslint/template-parser": "17.1.0",
-    "@angular/cli": "^17.0.2",
-    "@angular/compiler-cli": "^17.0.4",
-    "@types/jasmine": "~4.3.0",
-    "@types/node": "^18.7.16",
-    "@types/signature_pad": "^2.3.2",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "eslint": "^8.53.0",
-    "eslint-plugin-import": "latest",
-    "eslint-plugin-jsdoc": "latest",
-    "eslint-plugin-prefer-arrow": "latest",
-    "jasmine-core": "~4.4.0",
-    "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.1",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "^2.0.0",
-    "ng-packagr": "^17.0.2",
-    "protractor": "~7.0.0",
-    "rimraf": "~3.0.2",
-    "ts-node": "~10.9.1",
-    "typescript": "~5.2.2"
-  }
+ "name": "@almothafar/angular-signature-pad",
+ "version": "5.1.0",
+ "scripts": {
+  "ng": "ng",
+  "start": "ng serve",
+  "build": "ng build",
+  "build:prod": "rimraf dist && ng build angular-signature-pad --configuration production",
+  "pack": "cd dist/angular-signature-pad/ && npm pack",
+  "publish": "cd dist/angular-signature-pad/ && npm publish --access=public",
+  "test": "ng test",
+  "lint": "ng lint",
+  "e2e": "ng e2e"
+ },
+ "dependencies": {
+  "@angular/animations": "^18.1.4",
+  "@angular/common": "^18.1.4",
+  "@angular/compiler": "^18.1.4",
+  "@angular/core": "^18.1.4",
+  "@angular/forms": "^18.1.4",
+  "@angular/platform-browser": "^18.1.4",
+  "@angular/platform-browser-dynamic": "^18.1.4",
+  "@angular/router": "^18.1.4",
+  "eslint": "^8.0.0",
+  "rxjs": "~7.5.6",
+  "signature_pad": "^5.0.2",
+  "tslib": "^2.6.3",
+  "zone.js": "~0.14.10"
+ },
+ "devDependencies": {
+  "@angular-devkit/build-angular": "^18.1.4",
+  "@angular-eslint/builder": "^18.1.0",
+  "@angular-eslint/eslint-plugin": "18.1.0",
+  "@angular-eslint/eslint-plugin-template": "18.1.0",
+  "@angular-eslint/schematics": "^18.1.0",
+  "@angular-eslint/template-parser": "18.1.0",
+  "@angular/cli": "^18.1.4",
+  "@angular/compiler-cli": "^18.1.4",
+  "@types/jasmine": "~5.1.0",
+  "@types/node": "^18.7.16",
+  "@types/signature_pad": "^2.3.6",
+  "@typescript-eslint/eslint-plugin": "^8.1.0",
+  "@typescript-eslint/parser": "^8.1.0",
+  "eslint-plugin-import": "latest",
+  "eslint-plugin-jsdoc": "latest",
+  "eslint-plugin-prefer-arrow": "latest",
+  "jasmine-core": "~4.4.0",
+  "jasmine-spec-reporter": "~7.0.0",
+  "karma": "~6.4.0",
+  "karma-chrome-launcher": "~3.1.1",
+  "karma-coverage": "~2.2.0",
+  "karma-jasmine": "~5.1.0",
+  "karma-jasmine-html-reporter": "^2.0.0",
+  "ng-packagr": "^18.1.0",
+  "protractor": "^7.0.0",
+  "rimraf": "~6.0.1",
+  "ts-node": "~10.9.2",
+  "typescript": "~5.5.2"
+ }
 }
